--- a/action.yml
+++ b/action.yml
@@ -1,10 +1,5 @@
-name: 'Wait'
-description: 'Wait a designated number of milliseconds'
-inputs:
-  milliseconds:  # id of input
-    description: 'number of milliseconds to wait'
-    required: true
-    default: '1000'
+name: 'cheatsheets-updater'
+description: 'update latest cheatsheet template'
 outputs:
   time: # output will be available to future steps
     description: 'The message to output'
