:alembic:  with checkout

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ on:
   pull_request:
   push:
     branches:
-      - main
+      - master
       - v1
       - 'releases/*'
 
@@ -30,4 +30,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+      with:
+        repository: ohmycheatsheet/cheatsheets
+        ref: v1
     - uses: ./
