--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,4 +33,6 @@ jobs:
       with:
         repository: ohmycheatsheet/cheatsheets
         ref: v1
+        path: ohmycheatsheet
+    - uses: actions/checkout@v2
     - uses: ./
