--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,6 @@ jobs:
       with:
         repository: ohmycheatsheet/cheatsheets
         ref: v1
-        path: ohmycheatsheet
+        path: update-source
         clean: false
     - uses: ./
