--- a/package.json
+++ b/package.json
@@ -36,12 +36,14 @@
     "@actions/core": "^1.5.0",
     "@actions/exec": "^1.1.0",
     "@actions/github": "^5.0.0",
-    "execa": "^5.1.1"
+    "execa": "^5.1.1",
+    "fs-extra": "^10.0.0"
   },
   "devDependencies": {
     "@aiou/eslint-config": "^0.2.2",
     "@changesets/cli": "^2.17.0",
     "@jest/types": "^27.1.1",
+    "@types/fs-extra": "^9.0.13",
     "@types/jest": "^27.0.1",
     "@vercel/ncc": "^0.31.0",
     "cz-emoji": "^1.3.1",
