--- a/package.json
+++ b/package.json
@@ -37,7 +37,10 @@
     "@actions/exec": "^1.1.0",
     "@actions/github": "^5.0.0",
     "execa": "^5.1.1",
-    "fs-extra": "^10.0.0"
+    "fs-extra": "^10.0.0",
+    "globby": "^12.0.2",
+    "lodash.difference": "^4.5.0",
+    "lodash.intersection": "^4.4.0"
   },
   "devDependencies": {
     "@aiou/eslint-config": "^0.2.2",
@@ -45,6 +48,8 @@
     "@jest/types": "^27.1.1",
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "^27.0.1",
+    "@types/lodash.difference": "^4.5.6",
+    "@types/lodash.intersection": "^4.4.6",
     "@vercel/ncc": "^0.31.0",
     "cz-emoji": "^1.3.1",
     "dotenv": "^10.0.0",
