--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@actions/github": "^5.0.0",
     "execa": "^5.1.1",
     "fs-extra": "^10.0.0",
-    "globby": "^12.0.2",
+    "globby": "11.x",
     "lodash.difference": "^4.5.0",
     "lodash.intersection": "^4.4.0"
   },
