--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@actions/core": "^1.5.0",
     "@actions/exec": "^1.1.0",
     "@actions/github": "^5.0.0",
+    "@aiou/eslint-ignore": "^0.1.2",
     "execa": "^5.1.1",
     "fs-extra": "^10.0.0",
     "globby": "11.x",
@@ -43,7 +44,7 @@
     "lodash.intersection": "^4.4.0"
   },
   "devDependencies": {
-    "@aiou/eslint-config": "^0.2.2",
+    "@aiou/eslint-config": "^0.2.3",
     "@changesets/cli": "^2.17.0",
     "@jest/types": "^27.1.1",
     "@types/fs-extra": "^9.0.13",
