--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,5 +33,6 @@ jobs:
     - uses: ./
       with:
         debug: true
+        repo: ohmycheatsheets/cheatsheets
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
