--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@actions/exec": "^1.1.0",
     "@actions/github": "^5.0.0",
     "@aiou/eslint-ignore": "^0.1.2",
+    "diff": "^5.0.0",
     "execa": "^5.1.1",
     "fs-extra": "^10.0.0",
     "globby": "11.x",
@@ -47,6 +48,7 @@
     "@aiou/eslint-config": "^0.2.3",
     "@changesets/cli": "^2.17.0",
     "@jest/types": "^27.1.1",
+    "@types/diff": "^5.0.1",
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "^27.0.1",
     "@types/lodash.difference": "^4.5.6",
