--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "prepare": "ncc build ./src/index.ts -o dist --source-map --license licenses.txt && husky install",
     "test": "jest --setupFiles dotenv/config",
     "all": "pnpm run lint && pnpm run prepare && pnpm run test",
-    "ci:version": "pnpx changeset version"
+    "ci:version": "pnpm changeset version"
   },
   "lint-staged": {
     "**/**/*.{js,ts,vue,json}": [
@@ -46,7 +46,7 @@
     "lodash.intersection": "^4.4.0"
   },
   "devDependencies": {
-    "@aiou/eslint-config": "^0.2.3",
+    "@aiou/eslint-config": "^0.5.1",
     "@changesets/cli": "^2.17.0",
     "@jest/types": "^27.1.1",
     "@types/diff": "^5.0.1",
@@ -57,10 +57,11 @@
     "@vercel/ncc": "^0.31.0",
     "cz-emoji": "^1.3.1",
     "dotenv": "^10.0.0",
-    "eslint": "^7.32.0",
+    "eslint": "^8.17.0",
     "husky": "^7.0.0",
     "jest": "^27.1.1",
     "lint-staged": "^11.1.2",
+    "prettier": "^2.7.0",
     "ts-jest": "^27.0.5",
     "tslib": "^2.3.1",
     "typescript": "^4.4.3"
