--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "main": "dist/index.js",
   "scripts": {
     "lint:fix": "eslint . --fix",
-    "build": "pnpm run prepare",
+    "build:ignore": "pnpm esno ./scripts/fetch-ignore.ts",
+    "build": "pnpm run build:ignore && pnpm run prepare",
     "prepare": "ncc build ./src/index.ts -o dist --source-map --license licenses.txt && husky install",
     "test": "jest --setupFiles dotenv/config",
     "all": "pnpm run lint && pnpm run prepare && pnpm run test",
@@ -37,13 +38,13 @@
     "@actions/core": "^1.5.0",
     "@actions/exec": "^1.1.0",
     "@actions/github": "^5.0.0",
-    "@aiou/eslint-ignore": "^0.1.2",
     "diff": "^5.0.0",
     "execa": "^5.1.1",
     "fs-extra": "^10.0.0",
     "globby": "11.x",
     "lodash.difference": "^4.5.0",
-    "lodash.intersection": "^4.4.0"
+    "lodash.intersection": "^4.4.0",
+    "ohmyfetch": "^0.4.18"
   },
   "devDependencies": {
     "@aiou/eslint-config": "^0.5.1",
@@ -58,6 +59,7 @@
     "cz-emoji": "^1.3.1",
     "dotenv": "^10.0.0",
     "eslint": "^8.17.0",
+    "esno": "^0.16.3",
     "husky": "^7.0.0",
     "jest": "^27.1.1",
     "lint-staged": "^11.1.2",
