--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
   "main": "dist/index.js",
   "scripts": {
     "lint:fix": "eslint . --fix",
-    "build": "pnpm run prepare",
+    "build:ignore": "pnpm esno ./scripts/fetch-ignore.ts",
+    "build": "pnpm run build:ignore && pnpm run prepare",
     "prepare": "ncc build ./src/index.ts -o dist --source-map --license licenses.txt && husky install",
     "test": "jest --setupFiles dotenv/config",
     "all": "pnpm run lint && pnpm run prepare && pnpm run test",
-    "ci:version": "pnpx changeset version"
+    "ci:version": "pnpm changeset version"
   },
   "lint-staged": {
     "**/**/*.{js,ts,vue,json}": [
@@ -37,16 +38,16 @@
     "@actions/core": "^1.5.0",
     "@actions/exec": "^1.1.0",
     "@actions/github": "^5.0.0",
-    "@aiou/eslint-ignore": "^0.1.2",
     "diff": "^5.0.0",
     "execa": "^5.1.1",
     "fs-extra": "^10.0.0",
     "globby": "11.x",
     "lodash.difference": "^4.5.0",
-    "lodash.intersection": "^4.4.0"
+    "lodash.intersection": "^4.4.0",
+    "ohmyfetch": "^0.4.18"
   },
   "devDependencies": {
-    "@aiou/eslint-config": "^0.2.3",
+    "@aiou/eslint-config": "^0.5.1",
     "@changesets/cli": "^2.17.0",
     "@jest/types": "^27.1.1",
     "@types/diff": "^5.0.1",
@@ -57,10 +58,12 @@
     "@vercel/ncc": "^0.31.0",
     "cz-emoji": "^1.3.1",
     "dotenv": "^10.0.0",
-    "eslint": "^7.32.0",
+    "eslint": "^8.17.0",
+    "esno": "^0.16.3",
     "husky": "^7.0.0",
     "jest": "^27.1.1",
     "lint-staged": "^11.1.2",
+    "prettier": "^2.7.0",
     "ts-jest": "^27.0.5",
     "tslib": "^2.3.1",
     "typescript": "^4.4.3"
